--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -141,7 +141,7 @@ include::{snippets}/auth/refresh/http-request.adoc[]
 include::{snippets}/auth/refresh/http-response.adoc[]
 
 .Request Header
-request를 살펴보면 Authrization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
 
 이 Access Token은 만료된 Access Token이며, 토큰 재발급시 쿠키에 포함되어 함께 전송되는 Refresh token과 함께 토큰 재발급시 사용됩니다.
 
@@ -206,6 +206,13 @@ include::{snippets}/problems/search/http-request.adoc[]
 
 .Sample Response
 include::{snippets}/problems/search/http-response.adoc[]
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+
+이 Access Token은 아래의 설명과 같이 푼 문제 검색 기능을 활용할 때만 포함하면 됩니다.
+
+include::{snippets}/problems/search/request-headers.adoc[]
 
 .Request parameters
 include::{snippets}/problems/search/request-parameters.adoc[]
