--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -326,8 +326,8 @@ include::{snippets}/users/findAll/response-fields.adoc[]
 ----
 유저 정보 수정을 위한 API입니다.
 
-HTTP Method : PATCH
-End-Point   : /api/v1/users
+HTTP Method : PUT
+End-Point   : /api/v1/users/{userID: UUID}
 ----
 
 .Sample Request
