--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -218,6 +218,35 @@ include::{snippets}/problems/long/inquire/path-parameters.adoc[]
 include::{snippets}/problems/long/inquire/response-body.adoc[]
 include::{snippets}/problems/long/inquire/response-fields.adoc[]
 
+==== 서술형 문제 채점
+.description
+[source]
+----
+서술형 문제 채점을 위한 API입니다.
+
+HTTP Method : POST
+End-Point   : /api/v1/problems/long/{problem_id:Long}/grade
+----
+
+.Sample Request
+include::{snippets}/problems/long/grade/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/problems/long/grade/http-response.adoc[]
+
+.Path parameters
+include::{snippets}/problems/long/grade/path-parameters.adoc[]
+
+서술형 문제 단건 조회를 위한 path parameter의 설명입니다.
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+include::{snippets}/problems/long/grade/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/problems/long/grade/response-body.adoc[]
+include::{snippets}/problems/long/grade/response-fields.adoc[]
+
 ==== 단답형 문제 단건 조회
 
 
@@ -246,6 +275,35 @@ include::{snippets}/problems/short/inquire/path-parameters.adoc[]
 include::{snippets}/problems/short/inquire/response-body.adoc[]
 include::{snippets}/problems/short/inquire/response-fields.adoc[]
 
+==== 단답형 문제 채점
+.description
+[source]
+----
+단답형 문제 채점을 위한 API입니다.
+
+HTTP Method : POST
+End-Point   : /api/v1/problems/short/{problem_id:Long}/grade
+----
+
+.Sample Request
+include::{snippets}/problems/short/grade/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/problems/short/grade/http-response.adoc[]
+
+.Path parameters
+include::{snippets}/problems/short/grade/path-parameters.adoc[]
+
+단답형 문제 단건 조회를 위한 path parameter의 설명입니다.
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+include::{snippets}/problems/short/grade/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/problems/short/grade/response-body.adoc[]
+include::{snippets}/problems/short/grade/response-fields.adoc[]
+
 ==== 객관식 문제 단건 조회
 
 
@@ -273,6 +331,35 @@ include::{snippets}/problems/multiple/inquire/path-parameters.adoc[]
 .Response Body
 include::{snippets}/problems/multiple/inquire/response-body.adoc[]
 include::{snippets}/problems/multiple/inquire/response-fields.adoc[]
+
+==== 객관식 문제 채점
+.description
+[source]
+----
+객관식 문제 채점을 위한 API입니다.
+
+HTTP Method : POST
+End-Point   : /api/v1/problems/multiple/{problem_id:Long}/grade
+----
+
+.Sample Request
+include::{snippets}/problems/multiple/grade/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/problems/multiple/grade/http-response.adoc[]
+
+.Path parameters
+include::{snippets}/problems/multiple/grade/path-parameters.adoc[]
+
+객관식 문제 단건 조회를 위한 path parameter의 설명입니다.
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+include::{snippets}/problems/multiple/grade/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/problems/multiple/grade/response-body.adoc[]
+include::{snippets}/problems/multiple/grade/response-fields.adoc[]
 
 ==== 문제 검색
 
