--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -494,6 +494,34 @@ include::{snippets}/users/update/request-fields.adoc[]
 include::{snippets}/users/update/response-body.adoc[]
 include::{snippets}/users/update/response-fields.adoc[]
 
+==== 유저 삭제
+
+.description
+[source]
+----
+유저 삭제를 위한 API입니다.
+
+HTTP Method : DELETE
+End-Point   : /api/v1/users/{userID: UUID}
+----
+
+.Sample Request
+include::{snippets}/users/deleteOne/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/users/deleteOne/http-response.adoc[]
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+
+이 Access Token은 회원 인증을 위해 필수적으로 포함되어야 합니다.
+
+include::{snippets}/users/deleteOne/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/users/deleteOne/response-body.adoc[]
+include::{snippets}/users/deleteOne/response-fields.adoc[]
+
 == Back-Office APIs
 
 백오피스에서 사용되는 API입니다.
