--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -522,6 +522,35 @@ include::{snippets}/users/deleteOne/request-headers.adoc[]
 include::{snippets}/users/deleteOne/response-body.adoc[]
 include::{snippets}/users/deleteOne/response-fields.adoc[]
 
+==== 유저 통계 조회
+
+
+.description
+[source]
+----
+유저 통계 조회를 위한 API입니다.
+
+HTTP Method : GET
+End-Point   : /api/v1/users/{user_id}/stats
+----
+
+.Sample Request
+include::{snippets}/users/statsOne/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/users/statsOne/http-response.adoc[]
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+
+이 Access Token은 Admin 권한을 가진 유저의 Access Token이며, 인증을 위해 필수적으로 포함되어야 합니다.
+
+include::{snippets}/users/statsOne/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/users/statsOne/response-body.adoc[]
+include::{snippets}/users/statsOne/response-fields.adoc[]
+
 == Back-Office APIs
 
 백오피스에서 사용되는 API입니다.
