--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -244,7 +244,7 @@ include::{snippets}/password/change/response-fields.adoc[]
 
 === Common API ( /api/v1 )
 
-==== 메인페이지 통계 API
+==== 메인페이지 통계 조회
 
 .description
 [source]
@@ -265,7 +265,7 @@ include::{snippets}/common/stats/http-response.adoc[]
 include::{snippets}/common/stats/response-body.adoc[]
 include::{snippets}/common/stats/response-fields.adoc[]
 
-==== 기술 스택 데이터 API
+==== 기술 스택 데이터 조회
 
 .description
 [source]
@@ -291,6 +291,31 @@ include::{snippets}/common/techs/request-parameters.adoc[]
 include::{snippets}/common/techs/response-body.adoc[]
 include::{snippets}/common/techs/response-fields.adoc[]
 
+==== 랭킹 리스트 조회
+
+.description
+[source]
+----
+랭킹 리스트 조회를 위한 API입니다.
+
+HTTP Method : GET
+End-Point   : /api/v1/ranks
+----
+
+.Sample Request
+include::{snippets}/common/ranks/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/common/ranks/http-response.adoc[]
+
+.Request parameters
+
+조회를 위한 request parameter의 설명입니다.
+include::{snippets}/common/ranks/request-parameters.adoc[]
+
+.Response Body
+include::{snippets}/common/ranks/response-body.adoc[]
+include::{snippets}/common/ranks/response-fields.adoc[]
 
 
 === Problem API ( /api/v1/problems )
