--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -714,6 +714,8 @@ include::{snippets}/users/statsOne/request-headers.adoc[]
 include::{snippets}/users/statsOne/response-body.adoc[]
 include::{snippets}/users/statsOne/response-fields.adoc[]
 
+=== Notification API ( /api/v1/notifications )
+
 ==== Notification 조회
 
 .description
@@ -801,6 +803,36 @@ include::{snippets}/notifications/getAll/request-headers.adoc[]
 .Response Body
 include::{snippets}/notifications/readBulk/response-body.adoc[]
 include::{snippets}/notifications/readBulk/response-fields.adoc[]
+
+==== 읽지않은 Notification 개수 조회
+
+.description
+[source]
+----
+읽지않은 Notification 개수 조회를 위한 API입니다.
+
+HTTP Method : GET
+End-Point   : /api/v1/notifications/count
+Req Params : page, size
+----
+
+.Sample Request
+include::{snippets}/notifications/count/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/notifications/count/http-response.adoc[]
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+
+이 Access Token은 인증을 위해 필수적으로 포함되어야 합니다.
+
+include::{snippets}/notifications/count/request-headers.adoc[]
+
+.Response Body
+include::{snippets}/notifications/count/response-body.adoc[]
+include::{snippets}/notifications/count/response-fields.adoc[]
+
 
 == Back-Office APIs
 
