:memo: [MSTR-364] chore : update documentations

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -559,6 +559,36 @@ include::{snippets}/problems/grade/assessment/request-fields.adoc[]
 include::{snippets}/problems/grade/assessment/response-body.adoc[]
 include::{snippets}/problems/grade/assessment/response-fields.adoc[]
 
+
+=== Problems API V2 ( /api/v2/problems )
+==== 단답형 문제 단건 조회
+
+
+.description
+[source]
+----
+단답형 문제 단건 조회를 위한 API입니다.
+
+HTTP Method : GET
+End-Point   : /api/v2/problems/short/{problem_id:Long}
+----
+
+.Sample Request
+include::{snippets}/problems/v2/short/inquire/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/problems/v2/short/inquire/http-response.adoc[]
+
+.Path parameters
+include::{snippets}/problems/v2/short/inquire/path-parameters.adoc[]
+
+객관식 문제 단건 조회를 위한 path parameter의 설명입니다.
+
+
+.Response Body
+include::{snippets}/problems/v2/short/inquire/response-body.adoc[]
+include::{snippets}/problems/v2/short/inquire/response-fields.adoc[]
+
 === User API ( /api/v1/users )
 
 ==== 유저 조회
