:memo: add adoc
add adoc

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -367,7 +367,6 @@ include::{snippets}/problems/long/grade/http-response.adoc[]
 .Path parameters
 include::{snippets}/problems/long/grade/path-parameters.adoc[]
 
-서술형 문제 단건 조회를 위한 path parameter의 설명입니다.
 
 .Request Header
 request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
@@ -379,6 +378,41 @@ include::{snippets}/problems/long/grade/request-parameters.adoc[]
 .Response Body
 include::{snippets}/problems/long/grade/response-body.adoc[]
 include::{snippets}/problems/long/grade/response-fields.adoc[]
+
+
+=== 서술형 문제 제출 (채점 X)
+.description
+[source]
+----
+서술형 문제 제출을 위한 API 입니다.
+
+HTTP Method : POST
+End-Point   : /api/v1/problems/long/{problem_id:Long}/submit
+
+----
+
+.Sample Request
+include::{snippets}/problems/long/submit/http-request.adoc[]
+
+.Sample Response
+include::{snippets}/problems/long/submit/http-response.adoc[]
+
+.Path parameters
+include::{snippets}/problems/long/submit/path-parameters.adoc[]
+
+
+.Request Header
+request를 살펴보면 Authorization 헤더에서 Bearer token 형태로, access token을 전달하는 것을 알 수 있습니다.
+include::{snippets}/problems/long/submit/request-headers.adoc[]
+
+.Request Params
+include::{snippets}/problems/long/submit/request-parameters.adoc[]
+
+.Response Body
+include::{snippets}/problems/long/submit/response-body.adoc[]
+include::{snippets}/problems/long/submit/response-fields.adoc[]
+
+
 
 ==== 단답형 문제 단건 조회
 
