feat: create-post-with-long-problem-submit (#127)
* feat : 게시판 기능 구현

* Fix bug

* add test and docs

* fix : add transactional

* feat: create-post-with-long-problem-submit

* reafactor: lint 적용

* refactor: 삭제 안 된 파일 제거

---------

Co-authored-by: kshired <shiroed1211@gmail.com>

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1171,6 +1171,9 @@ End-Point   : /api/v1/comments
 .Sample Request
 include::{snippets}/posts/comments/create/http-request.adoc[]
 
+.Path parameters
+include::{snippets}/posts/comments/create/path-parameters.adoc[]
+
 .Sample Response
 include::{snippets}/posts/comments/create/http-response.adoc[]
 
